--- a/UrbanClapCloneClient/app/src/main/res/layout/fragment_service_provider.xml
+++ b/UrbanClapCloneClient/app/src/main/res/layout/fragment_service_provider.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    tools:context="com.kalabhedia.urbanclapclone.ServiceActivityFragment.ServiceProviderFragment">
+
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/serviceProviderList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:listitem="@layout/services_layout_view"/>
+        android:orientation="vertical"/>
 </FrameLayout>
